kubernetes/argo-cd/projects/nebius/production-hm/nimtable/environments/production/kubernetes-manifests/hm-nimtable-deployment.yaml
# https://github.com/nimtable/nimtable/blob/main/docker/docker-compose.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-nimtable-deployment
  namespace: production-hm-nimtable
  labels:
    app.kubernetes.io/name: nimtable
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: production-hm-nimtable
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nimtable
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nimtable
        app.kubernetes.io/component: backend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nimtable
          image: ghcr.io/nimtable/nimtable:nightly
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8182
          volumeMounts:
            - name: config
              mountPath: /nimtable/config.yaml
              subPath: config.yaml
          resources:
            requests:
              cpu: 10m
              memory: 600Mi
            limits:
              memory: 2500Mi
          livenessProbe:
            httpGet:
              path: /api/catalogs
              port: 8182
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/catalogs
              port: 8182
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: config-template
          configMap:
            name: hm-nimtable-configmap
        - name: config
          emptyDir: {}
      nodeSelector:
        environment: production
      tolerations:
        - key: environment
          operator: Equal
          value: production
          effect: NoSchedule
