kubernetes/argo-cd/projects/nebius/production-hm/nimtable/environments/production/kubernetes-manifests/hm-nimtable-web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-nimtable-web-service
  namespace: production-hm-nimtable
  labels:
    app.kubernetes.io/name: nimtable-web
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: production-hm-nimtable
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nimtable-web
    app.kubernetes.io/component: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
